# M2M

./: .gitignore  Cargo.toml  README.md
benches/: benchmark.rs
benchmarks/: compare_outputs.py  plot_results.py  python_results.json  results.json  results_table.tsv  run_all.sh  run_bench.py  rust_results.json
python_mapping_to_matrix/: bam_parser.py  cli.py  main.py  matrix_ops.py
src/: bam_parser.rs  lib.rs  main.rs  read_phylo.rs  sam_utils.rs
src/bam_parser/: bam_parser.rs
src/core/: cli.rs
src/phylo/: phylogeny.rs
src/read_phylo/: read_phylogeny.rs
src/sam_utils/: sam_parser.rs
